--- a/2.express/views/signup.html
+++ b/2.express/views/signup.html
@@ -5,6 +5,8 @@
     <title><%=title%></title>
 </head>
 <body>
+
+<span style="color:red"><%=error%></span>
 <form method="post">
     用户名:<input type="text" name="username"><br/>
     密码:<input type="text" name="password"><br/>
